<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="18dp"
        android:fontFamily="@font/fonts"
        android:text="@string/new_advertisement"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/display_name"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/fonts"
                    android:hint="@string/display_name"
                    android:textColorHint="#546E7A" />
            </com.google.android.material.textfield.TextInputLayout>

            <CheckBox
                android:id="@+id/device_name_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:checked="true"
                android:minHeight="48dp"
                android:text="@string/device_name" />

            <CheckBox
                android:id="@+id/tx_power_level_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:checked="true"
                android:minHeight="48dp"
                android:text="@string/tx_power_level" />

            <TextView
                android:id="@+id/advertising_mode_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/fonts"
                android:text="@string/advertising_mode"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textColor="#00796B" />

            <Spinner
                android:id="@+id/advertising_mode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:contentDescription="@string/advertising_mode_selector"
                android:minHeight="48dp" />

            <TextView
                android:id="@+id/tx_power_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:fontFamily="@font/fonts"
                android:text="@string/tx_power"
                android:textColor="#00796B" />

            <Spinner
                android:id="@+id/tx_power"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:contentDescription="@string/transmission_power_selector"
                android:minHeight="48dp" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>